# rarefy-jobs

./: .gitignore  Cargo.toml  package-lock.json  package.json
.github/workflows/: rust.yml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: api.rs  collector.rs  crawler.rs  lib.rs  main.rs  message.rs  prisma.rs  pubsub.rs  rare_finder.rs  redis_publisher.rs  redis_subscriber.rs  scraper.rs  utils.rs
src/crawler/: buyee.rs  find_jobs.rs  mod.rs  scrape_data.rs
src/crawlers/: buyee.rs  crawler.rs  mod.rs
