[package]
name = "crawlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.22.1"
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }
serde = { version = "1.0.152", features=["derive"] }
serde_json = "1.0.91"
crossbeam = "0.8"

# These are for scraping/crawling
reqwest = { version = "0.11", features = ["json"] }
#nipper = "0.1.9"
