[package]
name = "crawlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "prisma-cli"
]

[dependencies]
redis = "0.22.1"
dotenv = "0.15.0"
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }
serde = { version = "1.0.152", features=["derive"] }
serde_json = "1.0.91"
crossbeam = "0.8"
futures = "0.3.25"
serde_repr = "0.1"

# Utilities
log = "0.4.5"
simple_logger = "4.0.0"
colored = "2.0"
chrono = "0.4"


# These are for scraping/crawling
reqwest = { version = "0.11", features = [ "json", "rustls-tls" ], default-features = false }
#nipper = "0.1.9"

# These are for database access
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.3", features=["postgresql"] }

