[package]
name = "crawlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.22.1"
tokio = { version = "1.24.2", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }
serde = { version = "1.0.152", features=["derive"] }
serde_json = "1.0.91"
crossbeam = "0.8"
futures = "0.3.25"
tokio-scoped = "0.2"
reqwest = { version = "0.11", features = [ "json", "rustls-tls", "blocking", "brotli" ], default-features = false }
scraper = "0.14"
async-trait = "0.1.60"

# Utilities
anyhow = "1.0"
log = "0.4.5"
simple_logger = "4.0.0"
colored = "2.0"
chrono = "0.4"
